# ICRA_VCVS_SIM

./: 2018-07-31-10-16-54.bag  CMakeLists.txt  package.xml  rosbag_logging.ipynb  solution.bag  solution_bearing.bag  test_gazebo_model_states.bag
.ipynb_checkpoints/: rosbag_logging-checkpoint.ipynb
include/: .ASAP.h.swp  ASAP.h  PolyTrajGen.h  utils.h
launch/: .octomap_key.launch.swn  .octomap_key.launch.swo  .octomap_key.launch.swp  .path_solver.launch.swm  .path_solver.launch.swn  .path_solver.launch.swo  .path_solver.launch.swp  2018-09-06-20-47-24.bag  Untitled.ipynb  octomap_key.launch  path_solver.launch  pioneer_run.launch
launch/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
rviz/: path_solver.rviz
src/: .ASAP.cpp.swn  .ASAP.cpp.swo  .ASAP.cpp.swp  ASAP.cpp  PolyTrajGen.cpp  solve_path_test.cpp  utils.cpp
